--- a/templates/student/dashboard.html
+++ b/templates/student/dashboard.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <img  style="width: 50px;" src="/{{image}}" alt="">
         <a class="navbar-brand" href="#">Student Dashboard</a>
+    
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -64,6 +66,7 @@
                         </li>
                     </ul>
                 </div>
+
             </nav>
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -92,6 +95,9 @@
                             <div class="card-body">
                                 <p class="card-text">You have 3 upcoming events.</p>
                             </div>
+                            
+                
+
                         </div>
                     </div>
                 </div>
